<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ludo.barel.clientmobandvocspring.activities.SubscribeActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4682B4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/pseudoLabelSubscribe"
            android:layout_weight="1"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/pseudoSubscribeContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:hint="@string/pseudohint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/mailLabelSubscribe"
            android:layout_weight="1"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/mailSubscribeContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:hint="@string/mailLabelHint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/passWordLabelSubscribe"
            android:layout_weight="1"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/passwordSubscribeContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/passWordLabelSubscribeHint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textStyle="bold"
            android:textSize="10pt"
            android:text="@string/passWordConfirmLabelSubscribe"
            android:layout_weight="1"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:hint="@string/passWordConfirmLabelSubscribeHint"/>
    </LinearLayout>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:text="@string/subscribeValidLabel"
        android:layout_gravity="end"
        android:id="@+id/validerSubscribe"
        android:fontFamily="casual"/>

</LinearLayout>

</android.support.constraint.ConstraintLayout>
