<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ludo.barel.clientmobandvocspring.activities.SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#4682B4"
        android:textStyle="bold"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/textServAdd"
                android:textSize="18sp"
                android:text="@string/ipAdd_txt"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="casual"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/serveurAdd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/defaultIp"
                android:textSize="16sp"
                android:inputType="text"
                android:layout_gravity="end"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/pseudLabel"
                android:textSize="18sp"
                android:text="@string/pseudoParams"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="casual"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/pseudoParamsTxt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/pseudoHintParams"
                android:textSize="16sp"

                android:inputType="text"
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/soundPathLabel"
                android:textSize="16sp"
                android:text="@string/soundPathParams"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="casual"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/soundPathParamsTxt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintPathSound"
                android:textSize="18sp"
                android:inputType="text"
                android:layout_gravity="end"/>

        </LinearLayout>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:text="@string/SaveParams"
                android:layout_gravity="end"
                android:id="@+id/saveParamsBut"
                android:fontFamily="casual"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
